# AGRISAATHI

./: .env.example  .gitignore  Dockerfile  Dockerfile.mcp  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat
agents/: __init__.py  crop_doctor.py  farmer_concierge.py  market_whisperer.py  scheme_guide.py  weather_advisor.py
api/: __init__.py  main.py  models.py  security.py  session_store.py
api/routes/: __init__.py  whatsapp.py
docs/: ARCHITECTURE.md  BUILT_WITH_ANTIGRAVITY.md  DEMO_SCRIPT.md  SECURITY.md  VIDEO_STORYBOARD.md
frontend/: index.html  nginx.conf  package.json  vite.config.js
frontend/public/locales/bn/: translation.json
frontend/public/locales/en/: translation.json
frontend/public/locales/hi/: translation.json
frontend/public/locales/mr/: translation.json
frontend/src/: App.jsx  i18n.js  index.css
frontend/src/components/: DiagnosisCard.jsx  MessageBubble.jsx  PhotoCapture.jsx
frontend/src/hooks/: useChat.js  useSpeechRecognition.js  useSpeechSynthesis.js
mcp_servers/: __init__.py
mcp_servers/mandi_mcp/: __init__.py  server.py
mcp_servers/schemes_mcp/: __init__.py  server.py
mcp_servers/weather_mcp/: __init__.py  server.py
scripts/: setup_windows.bat  verify_windows.bat
terraform/: firestore.tf  iam.tf  main.tf  outputs.tf  secrets.tf  variables.tf
tests/eval/: plantvillage_subset.json  report.json  test_diagnosis_eval.py
tests/unit/: test_crop_doctor.py  test_imports.py  test_security.py
tools/: __init__.py  price_lookup.py  vision_tool.py  weather_lookup.py
(+2 files in other folders)
